java downgraded to 17